enterprise-chaos-hub/faults/kubernetes/pod-dns-error/k8s-fault.yaml
---
apiVersion: litmuschaos.io/v1alpha1
kind: K8sFault
metadata:
  name: pod-dns-error
spec:
  definition:
    targets:
      appinfo:
        applabel: ""
        appkind: ""
        appns: ""
    chaos:
      experiment: pod-dns-error
      serviceAccountName: litmus-admin
      image: artifactory.sdlc.ctl.gcp.db.com/dkr-public-local/dkr-io/harness/chaos-ddcr-faults:1.54.0
      imagePullPolicy: Always
      env:
        - name: TOTAL_CHAOS_DURATION
          value: "60" # in seconds

        # list of the target hostnames or kewywords eg. '["litmuschaos","chaosnative.io"]' . If empty all hostnames are targets
        - name: TARGET_HOSTNAMES
          value: ""

        # can be either exact or substring, determines whether the DNS query has to match exactly with one of the targets or can have any of the targets as substring
        - name: MATCH_SCHEME
          value: "exact"

        # percentage of DNS queries to be affected
        - name: TRANSACTION_PERCENTAGE
          value: ""

        ## Percentage of total pods to target
        - name: POD_AFFECTED_PERCENTAGE
          value: ""

        ## provide the cluster runtime
        - name: CONTAINER_RUNTIME
          value: "containerd"

        # provide the socket file path
        - name: SOCKET_PATH
          value: "/run/containerd/containerd.sock"

        - name: LIB_IMAGE
          value: artifactory.sdlc.ctl.gcp.db.com/dkr-public-local/dkr-io/harness/chaos-ddcr-faults:1.54.0

        ## Period to wait before and after injection of chaos in sec
        - name: RAMP_TIME
          value: ""

        ## it defines the sequence of chaos execution for multiple target pods
        ## supported values: serial, parallel
        - name: SEQUENCE
          value: "parallel"

        - name: TARGET_CONTAINER
          value: ""

        - name: TARGET_PODS
          value: ""

        # To select pods on specific node(s)
        - name: NODE_LABEL
          value: ""
